test/fail/type-instantiation.grace
type A = {}
type B = A.match(object {}).andAlso { type {} }
